feat: compute latest annotation statistics by job
