# src/main/java/api/bpartners/annotator/endpoint/rest/controller/mapper/JobMapper.java
@@ -1,6 +1,5 @@
 package api.bpartners.annotator.endpoint.rest.controller.mapper;
 
-import api.bpartners.annotator.endpoint.rest.model.AnnotationNumberPerLabel;
 import api.bpartners.annotator.endpoint.rest.model.CrupdateAnnotatedJob;
 import api.bpartners.annotator.endpoint.rest.model.CrupdateJob;
 import api.bpartners.annotator.endpoint.rest.model.Job;
@@ -24,8 +23,6 @@ public class JobMapper {
 
   public Job toRest(api.bpartners.annotator.repository.model.Job domain) {
     String connectedUserId = authenticatedResourceProvider.getAuthenticatedUser().getId();
-    List<AnnotationNumberPerLabel> annotationStatistics =
-        annotationBatchService.getAnnotationStatistics(domain);
     return new Job()
         .id(domain.getId())
         .name(domain.getName())
@@ -38,27 +35,7 @@ public class JobMapper {
         .type(domain.getType())
         .imagesHeight(domain.getImagesHeight())
         .imagesWidth(domain.getImagesWidth())
-        .taskStatistics(domain.getTaskStatistics(connectedUserId))
-        .annotationStatistics(annotationStatistics);
-  }
-
-  // use for rest list because annotationStatistics computing is a heavy task
-  public Job toRestListComponent(api.bpartners.annotator.repository.model.Job domain) {
-    String connectedUserId = authenticatedResourceProvider.getAuthenticatedUser().getId();
-    return new Job()
-        .id(domain.getId())
-        .name(domain.getName())
-        .bucketName(domain.getBucketName())
-        .folderPath(domain.getFolderPath())
-        .ownerEmail(domain.getOwnerEmail())
-        .status(statusMapper.toRest(domain.getStatus()))
-        .labels(domain.getLabels().stream().map(labelMapper::toRest).toList())
-        .teamId(domain.getTeamId())
-        .type(domain.getType())
-        .imagesHeight(domain.getImagesHeight())
-        .imagesWidth(domain.getImagesWidth())
-        .taskStatistics(domain.getTaskStatistics(connectedUserId))
-        .annotationStatistics(List.of());
+        .taskStatistics(domain.getTaskStatistics(connectedUserId));
   }
 
   public api.bpartners.annotator.repository.model.Job toDomain(CrupdateJob rest) {
